<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ImageSearch</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="search_button">Search</string>
    <string name="search_hint">Fill in with your query</string>
    <string name="add_photo">Take a photo</string>
    <string name="more_results">More results</string>
    <string name="comparing_text">You could use your own photo in this section by tapping button Take a photo</string>
    <string name="clipart">Clipart</string>
    <string name="face">Face</string>
    <string name="lineart">Lineart</string>
    <string name="news">News</string>
    <string name="photo">Photo</string>
    <string name="sites_hint">Site for search</string>
    <string name="no_results">No results found</string>

</resources>
