<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".HomeActivity">

    <EditText
        android:hint="@string/search_hint"
        android:id="@+id/editQuery_HomeActivity"
        android:singleLine="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RadioGroup
        android:layout_marginTop="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioClipart_HomeActivity"
            android:text="@string/clipart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/radioFace_HomeActivity"
            android:text="@string/face"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/radioLineart_HomeActivity"
            android:text="@string/lineart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/radioNews_HomeActivity"
            android:text="@string/news"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/radioPhoto_HomeActivity"
            android:text="@string/photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RadioGroup>

    <EditText
        android:layout_marginTop="16dp"
        android:hint="@string/sites_hint"
        android:id="@+id/editSite_HomeActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:text="@string/search_button"
        android:id="@+id/buttonSearch_HomeActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
